Fixing middle left alignement logo's
                Problems to solve :

-Unset the margin for panelist (only for the last session cards)
- Improve logos position's
-Add panelist names

--- a/css/style.css
+++ b/css/style.css
@@ -58,15 +58,34 @@ CSS DOCUMENT
 ----------------------------------------------------- */
 
 
-.sponsor_logo
+.sponsor_logo 
 {
 	width: 200px;
+	vertical-align: middle;
 }
+
+#intel
+{
+	margin-top: 95px; 
+}
+
+#jalios
+{
+	margin-top: 105px;
+
+}
+
+#microsoft
+{
+	margin-top: 110px;
+}
+
 
 .many_logo 
 {
-	margin: auto;
+	margin-top: 20px;
 	display: block;
-	width: 100px;
-	vertical-align: middle;
+	width: 150px;
+
 }
+
